--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+decorator==4.0.4
 docopt==0.6.2
-gringo==4.5.0.dev1
-future==0.14.3
-matplotlib=='1.4.3'
-pandas=='0.15.2'
-numpy=='1.9.2'
+future==0.15.2
+matplotlib==1.4.3
+networkx==1.10
+nose==1.3.7
+numpy==1.10.1
+pandas==0.17.0
+pyasp==1.4.1
+pyparsing==2.0.3
+python-dateutil==2.4.2
+pytz==2015.6
+six==1.10.0
+wheel==0.24.0
