--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include requirements.txt optional-requirements.txt Makefile README.mkd LICENCE logs/powergrasp.log
-recursive-include tests/ data/
+recursive-include powergrasp/data/ powergrasp/tests/
